feat: add operation listChoreTypes (#46)
* feat: add x-correlator in all endpoints

* feat: improve docs for headers

* fixes
